# F2VNotebook

./: .gitignore  FIREBASE_SETUP.md  README.md  docker-compose.yml
backend/: .env.example  farm2vets.db  pyproject.toml  requirements.txt  validate_analytics_flow.py
backend/app/: database.py  main.py  models.py
backend/app/core/: config.py
backend/app/routers/: ai.py  alerts.py  analytics.py  auth.py  consults.py  dashboard.py  heatmap.py  inventory.py  livestock.py  public_dashboard.py  quizzes.py  sensors.py  treatments.py
backend/app/schemas/: __init__.py  ai.py  alert.py  analytics.py  auth.py  consult.py  dashboard.py  heatmap.py  inventory.py  livestock.py  public_dashboard.py  quiz.py  report.py  sensor.py  treatment.py
frontend/: .env.local.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/chat/: ChatPanel.tsx  FullChatPanel.tsx
frontend/src/config/: firebase.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/data/: diseaseSpread.ts  mockData.ts
frontend/src/locales/: en.json  vi.json
frontend/src/pages/: AnalyticsPage.tsx  ChatPage.tsx  Dashboard.tsx  HeatDiseaseMapPage.tsx  InventoryPage.tsx  LandingPage.tsx  LivestocksPage.tsx  LoginPage.tsx  NotebookPage.tsx  ProfilePage.tsx  PublicDashboard.tsx  QuizPage.tsx  SignupPage.tsx  VetConnectPage.tsx
frontend/src/services/: api.ts  farm2vets.ts
frontend/src/types/: index.ts
src/: i18n.js
(+17 files in other folders)
