[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "farm2vets-backend"
version = "0.1.0"
description = "Farm2Vets Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.22",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.27.0",
]
